--- a/Application Building/Build The HTML Page/base.html
+++ b/Application Building/Build The HTML Page/base.html
@@ -63,7 +63,37 @@
     </div>
     {% endif %} {% endfor %} {% endif %} {% endwith %}
 
-    <div class="container">{% block content %} {% endblock %}</div>
+    <div class="container">
+      {% extends "base.html" %} 
+      {% block title %}Login{% endblock %} 
+      {% block content%}
+        <form method="POST">
+          <h2 align="center">Login</h3>
+          <div class="form-group">
+            <label for="email">Email Address</label>
+            <input
+              type="email"
+              class="form-control"
+              id="email"
+              name="email"
+              placeholder="Enter email"
+            />
+          </div>
+          <div class="form-group">
+            <label for="password">Password</label>
+            <input
+              type="password"  
+              class="form-control"
+              id="password"
+              name="password"
+              placeholder="Enter password"
+            />
+          </div>
+          <br />
+          <button type="submit" class="btn btn-primary">Login</button>
+        </form>
+     {% endblock %}  
+    </div>
     <script
       src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
       integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
