--- a/Application Building/Build The HTML Page/base.html
+++ b/Application Building/Build The HTML Page/base.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <style>
+      body{
+        background-image: url('/static/background.jpg');
+      }
+    </style>
     <link
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
@@ -17,11 +22,7 @@
     />
     <title>{% block title %}APP{% endblock %}</title>
   </head>
-  <body
-    style="
-      background-image: url('https://img.freepik.com/premium-photo/simple-abstract-geometric-pattern-background-color-background-website-design-decoration_86390-7410.jpg?w=2000');
-    "
-  >
+  <body>
     <h1 align="center">Real-Time Communication System for Specially-Abled</h1>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
       <button
